tests/lean/keyword_tactics.lean.expected.out
keyword_tactics.lean:34:2: error: unify tactic failed, failed to unify
  bool : Type
and
  ℕ : Type
state:
⊢ ℕ → ℕ → ℕ
keyword_tactics.lean:51:15: error: solve1 tactic failed, focused goal has not been solved
state:
f : ℕ → ℕ
⊢ ℕ
keyword_tactics.lean:57:0: error: tactic failed, there are unsolved goals
state:
f : ℕ → ℕ
⊢ ℕ → bool
